test_programs/compile_failure/dup_trait_items_3/src/main.nr
trait MyTrait {
  type SomeType;
  type SomeType;
}

fn main() {
}
